# smart-gRPC

./: Cargo.toml  build.rs
proto/: sentinel.proto
src/: lib.rs  main.rs  my_sentinel.rs  proto.rs  state.rs
