[package]
name = "smart-gRPC"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }

# Tonic
tonic = { version = "0.14.2", features = ["tls-native-roots", "tls-ring"] }
prost = "0.14.3"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"

# Rig
rig-core = "0.29.0"
rig-vertexai = "0.2.4"

[build-dependencies]
tonic-prost-build = "0.14.2"
